# uv-python-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
src/: app.py
tests/: test_app.py
